# cross-agent-eval-framework

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: rubric-night2.md
docs/night2-content-drafts/: agent-teams-need-evals-not-vibes.md  green-ci-is-not-shipped.md  md2deck-launch-positioning.md  self-critique-anti-slop.md
examples/: night1-partial-scorecard.json  night2-partial-scorecard.json
fixtures/negative/: claimed_score_exceeds_evidence.json  fake_all_green_no_negative.json  shipped_without_remote.json
fixtures/positive/: minimal_shipped_cli.json
reports/: 2026-06-16-night3-lane-c-checkpoint.html  2026-06-16-night3-lane-c-checkpoint.md  2026-06-16-night3-lane-c-validation-output.txt
schemas/: session_scorecard.schema.json
src/cross_agent_eval/: __init__.py  cli.py  scoring.py
tests/: test_cli.py  test_scoring.py
